<resources>
    <string name="app_name">LinkNycUI</string>
    <string name="dialer_string">Free calls anywhere in the U.S. powered by   </string>
    <string name="callMessage">Audio Call</string>
    <string name="callStatusRinging">Ringing</string>
    <string name="callStatusConnected">Connected</string>
    <string name="callHideKeypad">Hide Keypad</string>
    <string name="callEndCall">End Call</string>

    <!--Key Dial Values-->
    <string name="key1_Value">\u0020\u0020</string>
    <string name="key2_Value">ABC</string>
    <string name="key3_Value">DEF</string>
    <string name="key4_Value">GHI</string>
    <string name="key5_Value">JKL</string>
    <string name="key6_Value">MNO></string>
    <string name="key7_Value">PQRS</string>
    <string name="key8_Value">TUV</string>
    <string name="key9_Value">WXYZ</string>
    <string name="key0_Value">+</string>
    <string name="ketAterisk">*</string>
    <string name="keyHash">#</string>


    //Toast Messages
    <string name="defaultErrorMessage">Oops! Something Went Wrong</string>
    <string name="sipPermissionExist">Sip Call Permission already made! </string>
    <string name="ErrValidPhoneNo">Please Enter Valid Number</string>
    <string name="MsgSipReady">"Ready to make call"</string>
    <string name="MsgSipRegistering">"Registering with SIP Server"</string>
    <string name="MsgSipFailed">"SIP Registeration Failed"</string>
    <string name="ErrPrefSettings">Something Went Wrong with Pref settings</string>

</resources>
